--- a/become-tutor.html
+++ b/become-tutor.html
@@ -41,23 +41,26 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Find Tutors</a>
                         </li>
-                        <li class="nav-item">
+                          <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Enterprise</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link active-nav" href="become-tutor.html">Become a tutor</a>
                         </li>
                     </ul>
+                  
+                        
                     <div class="d-flex align-items-md-center flex-md-row flex-column">
                         <select class="form-select header-select mb-md-0 mb-3" style="color: rgba(255, 255, 255, 0.80);"
-                            aria-label="Default select example ">
-                            <option selected style="color: black;">English, USD</option>
-                            <option value="1" style="color: black;">English, EUR</option>
-                            <option value="2" style="color: black;">English, USD</option>
-                            <option value="3" style="color: black;">English, USD</option>
-                        </select>
-                        <button class="main-btn-blank ms-3 mb-md-0 mb-3 w-auto">Refer a friend</button>
-                        <a href="login.html" class="main-btn ms-3 w-auto">Log in</a>
+                        aria-label="Default select example ">
+                        <option selected style="color: black;">English, USD</option>
+                        <option value="1" style="color: black;">English, EUR</option>
+                        <option value="2" style="color: black;">English, USD</option>
+                        <option value="3" style="color: black;">English, USD</option>
+                    </select>
+                        <a  class="main-btn-blank ms-3 mb-md-0 mb-3 w-auto">Sign Up</a>
+                        <a href="login.html" class="main-btn-blank  ms-3 w-auto">Log in</a>
+                        <button class="main-btn ms-3 mb-md-0 mb-3 w-auto">Refer a friend</button>
                     </div>
                 </div>
             </div>
@@ -467,7 +470,7 @@
                         <li>
                             <a href="">Find tutor</a>
                         </li>
-                        <li>
+                           <li>
                             <a href="">Enterprise</a>
                         </li>
                         <li>
