--- a/private-lessons.html
+++ b/private-lessons.html
@@ -49,9 +49,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Find Tutors</a>
                         </li>
-                        <li class="nav-item">
+                          <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Enterprise</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link active-nav" href="become-tutor.html">Become a tutor</a>
                         </li>
@@ -1080,7 +1080,7 @@
                         <li>
                             <a href="">Find tutor</a>
                         </li>
-                        <li>
+                           <li>
                             <a href="">Enterprise</a>
                         </li>
                         <li>
