--- a/index.html
+++ b/index.html
@@ -958,6 +958,78 @@
         </section>
 
 
+        <section class="testimonials">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 order-lg-1 order-2">
+                        <h2 class="heading text-lg-start text-center">
+                            Student Testimonials
+                        </h2>
+
+                        <div id="carouselExampleIndicators" class="carousel slide testimonial-slider"
+                            data-bs-ride="carousel">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                    class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                    aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                    aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <p class="testimonial-text  text-lg-start text-center">
+                                        <img src="assets/images/comma.svg" alt="">
+                                        In my experience all the teachers are very supportive and friendly and the
+                                        placement process has been very smooth. it’s also no issue talk about whatever
+                                        you want to Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+                                        placeat fugiat earum?
+
+                                    </p>
+                                    <h4>Sherina Munir - Designer</h4>
+                                </div>
+                                <div class="carousel-item">
+                                    <p class="testimonial-text  text-lg-start text-center">
+                                        <img src="assets/images/comma.svg" alt="">
+                                        In my experience all the teachers are very supportive and friendly and the
+                                        placement process has been very smooth. it’s also no issue talk about whatever
+                                        you want to Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+                                        placeat fugiat earum?
+
+                                    </p>
+                                    <h4>Sherina Munir - Designer</h4>
+                                </div>
+                                <div class="carousel-item">
+                                    <p class="testimonial-text  text-lg-start text-center">
+                                        <img src="assets/images/comma.svg" alt="">
+                                        In my experience all the teachers are very supportive and friendly and the
+                                        placement process has been very smooth. it’s also no issue talk about whatever
+                                        you want to Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+                                        placeat fugiat earum?
+
+                                    </p>
+                                    <h4>Sherina Munir - Designer</h4>
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 d-flex justify-content-center order-lg-2 order-1 mb-lg-0 mb-4">
+                        <img src="assets/images/testimonials.png" alt="" class="mx-auto img-fluid">
+                    </div>
+
+                </div>
+            </div>
+        </section>
         
         <section class="language-training">
             <div class="container">
