--- a/index.html
+++ b/index.html
@@ -52,9 +52,15 @@
                             <option value="2" style="color: black;">English, USD</option>
                             <option value="3" style="color: black;">English, USD</option>
                         </select>
-                        <a  class="main-btn-blank ms-3 mb-md-0 mb-3 w-auto">Sign Up</a>
-                        <a href="login.html" class="main-btn-blank  ms-3 w-auto">Log in</a>
-                        <button class="main-btn ms-3 mb-md-0 mb-3 w-auto">Refer a friend</button>
+                        <!-- <a  class="main-btn-blank ms-3 mb-md-0 mb-3 w-auto">Sign Up</a>
+                        <a href="login.html" class="main-btn-blank  ms-3 w-auto">Log in</a> -->
+                        <div class="hoverable-dahboard">
+                            <a href="" class="main-btn ms-3 mb-md-0 mb-3 w-auto ">Dashboard</a>
+                            <div class="hoverable-dahboard-dropdown">
+                                <a href="" class="main-btn  mb-md-0 mb-3 w-auto ">Logout</a>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
