--- a/private-lessons.html
+++ b/private-lessons.html
@@ -509,6 +509,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- ===================new section start -->
         <section class="teacher-section pb-0">
             <div class="container">
                 <div class="row mb-3">
@@ -913,6 +915,7 @@
                 </div>
             </div>
         </section>
+         <!-- ===================new section end -->
 
 
         <section class="testimonials">
