--- a/private-lessons.html
+++ b/private-lessons.html
@@ -82,7 +82,7 @@
                         <div class="left-hero">
                             <div class="btn-hero">
                                 <button id="btn-hero-1" class="btns-hero">Private lessons</button>
-                                <button id="btn-hero-2" class="btns-hero">Group Lessons</button>
+                                <a href="group-lessons.html" id="btn-hero-2" class="btns-hero text-dark "  style="text-decoration:none;">Group Lessons</a>
                             </div>
                             <h1 class="main-heading text-dark mt-5">
                                 Online English tutors <br> & teachers <br> for private lessons
