--- a/group-lessons.html
+++ b/group-lessons.html
@@ -107,7 +107,7 @@
 
         <div class="">
             <div class="container">
-                <div class="row select-section">
+                <div class="row select-section select-section2 justify-content-xl-around justify-content-center">
                     <div class="filter-main-div mb-xl-0 mb-3 active-filter">
                         <img src="assets/images/group-icons/level.svg" alt="" class="">
                         <select class="form-select" aria-label="Default select example">
@@ -171,7 +171,7 @@
                             <option value="Italian">Italian</option>
                         </select>
                     </div>
-                    <div class="filter-btn-div px-0 py-0 ps-lg-2 ">
+                    <div class="filter-btn-div px-0 py-0 ps-lg-2  ">
                         <button class="filter-btn flex-grow-1">Clear Filter</button>
                     </div>
                 </div>
